# coursework_7

./: .env.sample  README.md  django  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_habit_next_date_alter_habit_time.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_su.py
users/migrations/: 0001_initial.py
